Fixes: - Editor: removed menu item AirConsole / placed it in Window -> AirConsole (Unity guidelines!) - Plugin: added support for AirConsole API 1.2 - Plugin: updated build version 1.0

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 # =============== #
 Temp/
 /Library/
-
+AssetStoreTools/
+AssetStoreTools.*
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
