--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -5,6 +5,12 @@
 	android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0">
+    <uses-feature 
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature 
+        android:name="android.software.leanback"
+        android:required="true" />
     <supports-screens
         android:smallScreens="false"
         android:normalScreens="false"
@@ -17,13 +23,15 @@
 		android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:debuggable="true">
-        <activity android:name="com.unity3d.player.UnityPlayerActivity"
-                  android:label="@string/app_name">
+        <activity 
+                android:name="com.unity3d.player.UnityPlayerActivity"
+                android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
+            <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
         </activity>
     </application>
 </manifest>
