--- a/Assets/AirConsole/plugins/WebView.bundle/Contents/Info.plist
+++ b/Assets/AirConsole/plugins/WebView.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17G65</string>
+	<string>22G91</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -29,16 +29,20 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9F2000</string>
+	<string></string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>14.0</string>
 	<key>DTSDKBuild</key>
-	<string>17E189</string>
+	<string>23A334</string>
 	<key>DTSDKName</key>
-	<string>macosx10.13</string>
+	<string>macosx14.0</string>
 	<key>DTXcode</key>
-	<string>0941</string>
+	<string>1500</string>
 	<key>DTXcodeBuild</key>
-	<string>9F2000</string>
+	<string>15A240d</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.14.6</string>
 </dict>
 </plist>
