--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "com.airconsole.webview": "https://github.com/AirConsole/airconsole-unity-webview.git?path=/package",
     "com.unity.ext.nunit": "1.0.6",
-    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
