--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,12 @@
 {
   "dependencies": {
-    "com.airconsole.webview": "https://github.com/AirConsole/airconsole-unity-webview.git?path=/package",
-    "com.unity.ext.nunit": "1.0.6",
+    "com.airconsole.webview": "https://github.com/AirConsole/airconsole-unity-webview.git?path=/package#v1.0.0",
+    "com.unity.ext.nunit": "2.0.5",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.3.2",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.textmeshpro": "2.1.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
